<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/light_purple"
                tools:context="com.wear.adap.adam.wear.flashchatnewfirebase.MainChatActivity">


    <Button
        android:id="@+id/sendbad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sendgood"
        android:layout_alignBottom="@+id/sendgood"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="53dp"
        android:layout_marginRight="53dp"
        android:onClick="badjobnotify"
        android:text="@string/corrective"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/sendgood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="200dp"
        android:onClick="goodjobnotify"
        android:text="@string/positive"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/listFooter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/messageInput"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:hint="@string/prompt_msg"
            android:imeActionLabel="@string/action_send"
            android:imeOptions="actionUnspecified"
            android:inputType="textCapSentences|textAutoCorrect"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_shape"
            android:contentDescription="@string/action_send"
            android:padding="10dp"
            android:src="@android:drawable/ic_menu_send" />
    </LinearLayout>


</RelativeLayout>
